fix z-index bug

--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,6 @@ a {
 }
 
 .img-container {
-	z-index: 1;
 	position: relative;
 }
 
@@ -158,18 +157,17 @@ a {
 }
 
 .photo {
-  z-index: 1;
-  opacity: 0.8;
+	position: relative;
+  opacity: 0.9;
   width: 100%;
   height: 600px;
-  transform: scale(1);
-  transition: opacity 800ms, transform 600ms;
-  &:hover {
-    transform: scale(1.3);
-		z-index: 100;
-    opacity: 1;
-    transition: transform 600ms, opacity 2000ms;
-  }
+}
+
+.photo:hover {
+  transform: scale(1.4);
+	opacity: 1;
+  transition: transform 600ms, opacity 1000ms;
+	z-index: 2;
 }
 
 @media screen and (width <= 700px) {
